Bug 386264 - enabling regex search after entering pattern fails to find matches until pattern is edited further
Summary: enabling regex search after entering pattern fails to find matches until patt...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: history (other bugs)
Version First Reported In: 17.04.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-27 20:15 UTC by John Florian
Modified: 2018-04-05 16:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Florian 2017-10-27 20:15:29 UTC
In konsole, I had a search set up for `history` (which had matches), I then wanted to also find matches for `timing`, so I changed the pattern to `history|timing` but found no matches.  I then checked the options where I had assumed regex was already enabled, but it wasn't.  So, I toggled that option on and still didn't find any matches -- oops, bug!  I then deleted the last letter of my pattern and added it back on and then I had matches -- and a work-around.
Comment 1 Kurt Hindenburg 2018-03-12 14:59:46 UTC
Git commit 9db706226bd221abcecf7ecac4d442430088a11a by Kurt Hindenburg.
Committed on 12/03/2018 at 14:56.
Pushed by hindenburg into branch 'master'.

After changing search match regular expression option, refresh searches

The signal IncrementalSearchBar::matchRegExpToggled was not connected
to any slot.
FIXED-IN: 18.04

M  +1    -0    src/SessionController.cpp

https://commits.kde.org/konsole/9db706226bd221abcecf7ecac4d442430088a11a