After changing search match regular expression option, refresh searches

The signal IncrementalSearchBar::matchRegExpToggled was not connected
to any slot.

BUG: 386264
FIXED-IN: 18.04